# packages/contracts/tsp-output/openapi/openapi.yaml
@@ -154,6 +154,16 @@ paths:
           schema:
             $ref: '#/components/schemas/NotificationStatus'
           explode: false
+        - name: readStatus
+          in: query
+          required: false
+          description: Filter by read status ("read" or "unread")
+          schema:
+            type: string
+            enum:
+              - read
+              - unread
+          explode: false
       responses:
         '200':
           description: The request has succeeded.
